GramaticaRegularParser.py
# Generated from GramaticaRegular.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class GramaticaRegularParser ( Parser ):

    grammarFileName = "GramaticaRegular.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'V '", "'T '", "'P '", "'S '", "'= ['", 
                     "']'", "', '", "'= '", "'('", "'>'", "')'", "'), '", 
                     "'|'", "<INVALID>", "<INVALID>", "'#'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "VAR", "VAR_T", "VAZIO", 
                      "WS" ]

    RULE_gram = 0
    RULE_naoterminais = 1
    RULE_terminais = 2
    RULE_simbolos = 3
    RULE_simboloster = 4
    RULE_inicial = 5
    RULE_producoes = 6
    RULE_producao = 7
    RULE_transicao = 8

    ruleNames =  [ "gram", "naoterminais", "terminais", "simbolos", "simboloster", 
                   "inicial", "producoes", "producao", "transicao" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    VAR=14
    VAR_T=15
    VAZIO=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class GramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def naoterminais(self):
            return self.getTypedRuleContext(GramaticaRegularParser.NaoterminaisContext,0)


        def terminais(self):
            return self.getTypedRuleContext(GramaticaRegularParser.TerminaisContext,0)


        def producoes(self):
            return self.getTypedRuleContext(GramaticaRegularParser.ProducoesContext,0)


        def inicial(self):
            return self.getTypedRuleContext(GramaticaRegularParser.InicialContext,0)


        def EOF(self):
            return self.getToken(GramaticaRegularParser.EOF, 0)

        def getRuleIndex(self):
            return GramaticaRegularParser.RULE_gram

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGram" ):
                return visitor.visitGram(self)
            else:
                return visitor.visitChildren(self)




    def gram(self):

        localctx = GramaticaRegularParser.GramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_gram)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.match(GramaticaRegularParser.T__0)
            self.state = 19
            self.naoterminais()
            self.state = 20
            self.match(GramaticaRegularParser.T__1)
            self.state = 21
            self.terminais()
            self.state = 22
            self.match(GramaticaRegularParser.T__2)
            self.state = 23
            self.producoes()
            self.state = 24
            self.match(GramaticaRegularParser.T__3)
            self.state = 25
            self.inicial()
            self.state = 26
            self.match(GramaticaRegularParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NaoterminaisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simbolos(self):
            return self.getTypedRuleContext(GramaticaRegularParser.SimbolosContext,0)


        def getRuleIndex(self):
            return GramaticaRegularParser.RULE_naoterminais

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNaoterminais" ):
                return visitor.visitNaoterminais(self)
            else:
                return visitor.visitChildren(self)




    def naoterminais(self):

        localctx = GramaticaRegularParser.NaoterminaisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_naoterminais)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(GramaticaRegularParser.T__4)
            self.state = 29
            self.simbolos()
            self.state = 30
            self.match(GramaticaRegularParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TerminaisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simboloster(self):
            return self.getTypedRuleContext(GramaticaRegularParser.SimbolosterContext,0)


        def getRuleIndex(self):
            return GramaticaRegularParser.RULE_terminais

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerminais" ):
                return visitor.visitTerminais(self)
            else:
                return visitor.visitChildren(self)




    def terminais(self):

        localctx = GramaticaRegularParser.TerminaisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_terminais)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(GramaticaRegularParser.T__4)
            self.state = 33
            self.simboloster()
            self.state = 34
            self.match(GramaticaRegularParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SimbolosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(GramaticaRegularParser.VAR, 0)

        def simbolos(self):
            return self.getTypedRuleContext(GramaticaRegularParser.SimbolosContext,0)


        def getRuleIndex(self):
            return GramaticaRegularParser.RULE_simbolos

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimbolos" ):
                return visitor.visitSimbolos(self)
            else:
                return visitor.visitChildren(self)




    def simbolos(self):

        localctx = GramaticaRegularParser.SimbolosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simbolos)
        try:
            self.state = 40
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(GramaticaRegularParser.VAR)
                self.state = 37
                self.match(GramaticaRegularParser.T__6)
                self.state = 38
                self.simbolos()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.match(GramaticaRegularParser.VAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SimbolosterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_T(self):
            return self.getToken(GramaticaRegularParser.VAR_T, 0)

        def simboloster(self):
            return self.getTypedRuleContext(GramaticaRegularParser.SimbolosterContext,0)


        def getRuleIndex(self):
            return GramaticaRegularParser.RULE_simboloster

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimboloster" ):
                return visitor.visitSimboloster(self)
            else:
                return visitor.visitChildren(self)




    def simboloster(self):

        localctx = GramaticaRegularParser.SimbolosterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_simboloster)
        try:
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.match(GramaticaRegularParser.VAR_T)
                self.state = 43
                self.match(GramaticaRegularParser.T__6)
                self.state = 44
                self.simboloster()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.match(GramaticaRegularParser.VAR_T)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InicialContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(GramaticaRegularParser.VAR, 0)

        def getRuleIndex(self):
            return GramaticaRegularParser.RULE_inicial

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInicial" ):
                return visitor.visitInicial(self)
            else:
                return visitor.visitChildren(self)




    def inicial(self):

        localctx = GramaticaRegularParser.InicialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_inicial)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(GramaticaRegularParser.T__7)
            self.state = 49
            self.match(GramaticaRegularParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProducoesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def producao(self):
            return self.getTypedRuleContext(GramaticaRegularParser.ProducaoContext,0)


        def getRuleIndex(self):
            return GramaticaRegularParser.RULE_producoes

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProducoes" ):
                return visitor.visitProducoes(self)
            else:
                return visitor.visitChildren(self)




    def producoes(self):

        localctx = GramaticaRegularParser.ProducoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_producoes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(GramaticaRegularParser.T__4)
            self.state = 52
            self.producao()
            self.state = 53
            self.match(GramaticaRegularParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProducaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(GramaticaRegularParser.VAR, 0)

        def transicao(self):
            return self.getTypedRuleContext(GramaticaRegularParser.TransicaoContext,0)


        def producao(self):
            return self.getTypedRuleContext(GramaticaRegularParser.ProducaoContext,0)


        def getRuleIndex(self):
            return GramaticaRegularParser.RULE_producao

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProducao" ):
                return visitor.visitProducao(self)
            else:
                return visitor.visitChildren(self)




    def producao(self):

        localctx = GramaticaRegularParser.ProducaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_producao)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.match(GramaticaRegularParser.T__8)
                self.state = 56
                self.match(GramaticaRegularParser.VAR)
                self.state = 57
                self.match(GramaticaRegularParser.T__9)
                self.state = 58
                self.transicao()
                self.state = 59
                self.match(GramaticaRegularParser.T__10)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(GramaticaRegularParser.T__8)
                self.state = 62
                self.match(GramaticaRegularParser.VAR)
                self.state = 63
                self.match(GramaticaRegularParser.T__9)
                self.state = 64
                self.transicao()
                self.state = 65
                self.match(GramaticaRegularParser.T__11)
                self.state = 66
                self.producao()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TransicaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_T(self):
            return self.getToken(GramaticaRegularParser.VAR_T, 0)

        def VAR(self):
            return self.getToken(GramaticaRegularParser.VAR, 0)

        def transicao(self):
            return self.getTypedRuleContext(GramaticaRegularParser.TransicaoContext,0)


        def VAZIO(self):
            return self.getToken(GramaticaRegularParser.VAZIO, 0)

        def getRuleIndex(self):
            return GramaticaRegularParser.RULE_transicao

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransicao" ):
                return visitor.visitTransicao(self)
            else:
                return visitor.visitChildren(self)




    def transicao(self):

        localctx = GramaticaRegularParser.TransicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_transicao)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(GramaticaRegularParser.VAR_T)
                self.state = 71
                self.match(GramaticaRegularParser.VAR)
                self.state = 72
                self.match(GramaticaRegularParser.T__12)
                self.state = 73
                self.transicao()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(GramaticaRegularParser.VAR_T)
                self.state = 75
                self.match(GramaticaRegularParser.T__12)
                self.state = 76
                self.transicao()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.match(GramaticaRegularParser.VAR_T)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.match(GramaticaRegularParser.VAR_T)
                self.state = 79
                self.match(GramaticaRegularParser.VAR)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.match(GramaticaRegularParser.VAZIO)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





